# AudioBook-Maker

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml
.github/workflows/: build-backend.yml
backend/: Dockerfile  config.py  install_backend.bat  install_spacy_models.py  install_xtts_models.py  main.py  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  start_backend.bat  version.py
backend/api/: audio.py  chapters.py  engine_hosts.py  engines.py  epub_import_routes.py  events.py  health.py  import_routes.py  jobs.py  projects.py  pronunciation.py  quality.py  segments.py  settings.py  speakers.py  text_processing.py  tts.py
backend/core/: __init__.py  audio_engine_discovery.py  audio_engine_manager.py  audio_merger.py  base_engine_discovery.py  base_engine_manager.py  docker_runner.py  engine_discovery.py  engine_exceptions.py  engine_manager.py  engine_runner.py  engine_runner_registry.py  exceptions.py  local_runner.py  pronunciation_transformer.py  quality_worker.py  remote_docker_runner.py  (+7 more)
database/: schema.sql
docs/: ENGINE_DEVELOPMENT_GUIDE.md  engine-development-guide.md  engine-system-architecture.md  import md sample file with structure.md
frontend/: INSTALL_RUST.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
(+360 files in other folders)
